--- a/index.ipynb
+++ b/index.ipynb
@@ -408,12 +408,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<folium.map.Marker at 0x7ff6e5b7dac8>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "la_boca_marker = marker_six\n",
-    "l"
+    "la_boca_marker"
    ]
   },
   {
