Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -437,7 +437,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -519,7 +521,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = neighborhood"
+    "recoleta_marker = neighborhood_markers[]"
    ]
   },
   {
