--- a/index.ipynb
+++ b/index.ipynb
@@ -517,11 +517,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<folium.map.Marker at 0x7ff6e5b7d978>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "recoleta_marker = neighborhood_markers[]"
+    "recoleta_marker = neighborhood_markers[1]\n",
+    "recoleta_marker"
    ]
   },
   {
